syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum GadgetBornType {
	GADGET_BORN_TYPE_NONE = 0;
	GADGET_BORN_TYPE_IN_AIR = 1;
	GADGET_BORN_TYPE_PLAYER = 2;
	GADGET_BORN_TYPE_MONSTER_HIT = 3;
	GADGET_BORN_TYPE_MONSTER_DIE = 4;
	GADGET_BORN_TYPE_GADGET = 5;
	GADGET_BORN_TYPE_GROUND = 6;
}
