syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 341
// EnetChannelId: 0
// EnetIsReliable: true
message HostPlayerNotify {
	uint32 host_uid = 10;
	uint32 host_peer_id = 7;
}
